added media queries for the create adaptive version

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
       <div class="o-items">
         <div class="o-left">
-          <article class="ol-item ol-a1">
+          <article class="o-item ol-item ol-a1">
             <div class="o-head">
               <h3>100% Гарантия качества</h3>
               <div class="curve">
@@ -22,9 +22,9 @@
                 <div class="circle"></div>
               </div>
             </div>
-            <p>Ваша первая покупка – это начало  плодотворного сотрудничества. Ведь мы беспокоимся о том, чтобы наши клиенты оставались довольными.</p>
+            <p class="o-body">Ваша первая покупка – это начало  плодотворного сотрудничества. Ведь мы беспокоимся о том, чтобы наши клиенты оставались довольными.</p>
           </article>
-          <article class="ol-item ol-a2">
+          <article class="o-item ol-item ol-a2">
             <div class="o-head">
               <h3>Натуральные материалы</h3>
               <div class="curve">
@@ -32,9 +32,9 @@
                 <div class="circle"></div>
               </div>
             </div>
-            <p>Сделав заказ, вы получаете экологический товар, который не навредит вашему здоровью. Вы будете себя чувствовать удобно всегда и везде.</p>
+            <p class="o-body">Сделав заказ, вы получаете экологический товар, который не навредит вашему здоровью. Вы будете себя чувствовать удобно всегда и везде.</p>
           </article>
-          <article class="ol-item ol-a3">
+          <article class="o-item ol-item ol-a3">
             <div class="o-head">
               <h3>Скидки на следующие покупки</h3>
               <div class="curve">
@@ -42,9 +42,9 @@
                 <div class="circle"></div>
               </div>
             </div>
-            <p>Покупать стильную и качественную вещь в нашем магазине стало еще выгодней – на следующую покупку скидка 20%.</p>
+            <p class="o-body">Покупать стильную и качественную вещь в нашем магазине стало еще выгодней – на следующую покупку скидка 20%.</p>
           </article>
-          <article class="ol-item ol-a4">
+          <article class="o-item ol-item ol-a4">
             <div class="o-head">
               <h3>5 лет на рынке</h3>
               <div class="curve">
@@ -52,7 +52,7 @@
                 <div class="circle"></div>
               </div>
             </div>
-            <p>Чтобы обеспечить надежность вашей покупки, мы даем гарантию на товар 6 месяцев.</p>
+            <p class="o-body">Чтобы обеспечить надежность вашей покупки, мы даем гарантию на товар 6 месяцев.</p>
           </article>
         </div>
 
@@ -61,7 +61,7 @@
         </div>
         
         <div class="o-right">
-          <article class="or-item or-a1">
+          <article class="o-item or-item or-a1">
             <div class="o-head">
               <h3>Качественное обслуживание</h3>
               <div class="curve">
@@ -71,7 +71,7 @@
             </div>
             <p class="o-body">Обеспечиваем каждого покупателя подробной консультацией и любыми деталями, которые вас могут заинтересовать.</p>
           </article>
-          <article class="or-item or-a2">
+          <article class="o-item or-item or-a2">
             <div class="o-head">
               <h3>Безопасные покупки</h3>
               <div class="curve">
@@ -79,9 +79,9 @@
                 <div class="circle"></div>
               </div>
             </div>
-            <p>Мы предусматриваем исключительно безопасную покупку, когда клиент делает оплату после доставки и проверки товара, вы ничем не рискуете.</p>
+            <p class="o-body">Мы предусматриваем исключительно безопасную покупку, когда клиент делает оплату после доставки и проверки товара, вы ничем не рискуете.</p>
           </article>
-          <article class="or-item or-a3">
+          <article class="o-item or-item or-a3">
             <div class="o-head">
               <h3>Быстрая доставка</h3>
               <div class="curve">
@@ -89,9 +89,9 @@
                 <div class="circle"></div>
               </div>
             </div>
-            <p>Свой заказ вы получаете в течение 1-3 дней с момента заказа.</p>
+            <p class="o-body">Свой заказ вы получаете в течение 1-3 дней с момента заказа.</p>
           </article>
-          <article class="or-item or-a4">
+          <article class="o-item or-item or-a4">
             <div class="o-head">
               <h3>Более 3500 довольных клиентов</h3>
               <div class="curve">
@@ -99,7 +99,7 @@
                 <div class="circle"></div>
               </div>
             </div>
-            <p> Получив качественное обслуживание, гарантию и желаемый товар, большая часть клиентов возвращается в наш магазин.</p>
+            <p class="o-body"> Получив качественное обслуживание, гарантию и желаемый товар, большая часть клиентов возвращается в наш магазин.</p>
           </article>
         </div>
       </div>
