finished adaptive, but no center img

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
         </div>
 
         <div class="polygon">
+          <svg></svg>
           <img src="img/polygon_clothes.png" height="332" width="333" alt="">
         </div>
         
