--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="o-items">
         <div class="o-left">
-          <article class="o-item ol-item ol-a1">
+          <article class="o-item ol-item ol-a1 i1">
             <div class="o-head">
               <h3>100% Гарантия качества</h3>
               <div class="curve">
@@ -24,7 +24,7 @@
             </div>
             <p class="o-body">Ваша первая покупка – это начало  плодотворного сотрудничества. Ведь мы беспокоимся о том, чтобы наши клиенты оставались довольными.</p>
           </article>
-          <article class="o-item ol-item ol-a2">
+          <article class="o-item ol-item ol-a2 i2">
             <div class="o-head">
               <h3>Натуральные материалы</h3>
               <div class="curve">
@@ -34,7 +34,7 @@
             </div>
             <p class="o-body">Сделав заказ, вы получаете экологический товар, который не навредит вашему здоровью. Вы будете себя чувствовать удобно всегда и везде.</p>
           </article>
-          <article class="o-item ol-item ol-a3">
+          <article class="o-item ol-item ol-a3 i3">
             <div class="o-head">
               <h3>Скидки на следующие покупки</h3>
               <div class="curve">
@@ -44,7 +44,7 @@
             </div>
             <p class="o-body">Покупать стильную и качественную вещь в нашем магазине стало еще выгодней – на следующую покупку скидка 20%.</p>
           </article>
-          <article class="o-item ol-item ol-a4">
+          <article class="o-item ol-item ol-a4 i4">
             <div class="o-head">
               <h3>5 лет на рынке</h3>
               <div class="curve">
@@ -57,12 +57,23 @@
         </div>
 
         <div class="polygon">
-          <svg></svg>
-          <img src="img/polygon_clothes.png" height="332" width="333" alt="">
+          <img src="img/polygon_clothes.png" height="333" width="332" alt="">
+          <svg  class="poly-svg" id="poly-svg" width="332" height="333" viewBox="0 0 332 333">
+
+
+            <polygon class="p p2" fill="#F76786" points="63.8,63.5 21.7,166 56,166 88.2,88.7 "/>
+            <polygon class="p p1" fill="#F76786" points="165.5,55.7 165.5,20.8 63.8,63.5 88.2,88.7 "/>
+            <polygon class="p p5" fill="#F76786" points="244.5,88.7 269.6,63.6 165.5,20.8 165.5,55.7 "/>
+            <polygon class="p p6" fill="#F76786" points="277.3,166 311.8,166 269.6,63.6 244.5,88.7 "/>
+            <polygon class="p p7" fill="#F76786" points="268.8,268 311.8,166 277.3,166 245.5,244 "/>
+            <polygon class="p p8" fill="#F76786" points="166.5,310.5 268.8,268 245.5,244 166.5,276 "/>
+            <polygon class="p p4" fill="#F76786" points="64.2,267.3 88.5,244 166.5,276 166.5,310.5 "/>
+            <polygon class="p p3" fill="#F76786" points="21.7,166 56,166 88.5,244 64.2,267.3 "/>
+          </svg>
         </div>
         
         <div class="o-right">
-          <article class="o-item or-item or-a1">
+          <article class="o-item or-item or-a1 i5">
             <div class="o-head">
               <h3>Качественное обслуживание</h3>
               <div class="curve">
@@ -72,7 +83,7 @@
             </div>
             <p class="o-body">Обеспечиваем каждого покупателя подробной консультацией и любыми деталями, которые вас могут заинтересовать.</p>
           </article>
-          <article class="o-item or-item or-a2">
+          <article class="o-item or-item or-a2 i6">
             <div class="o-head">
               <h3>Безопасные покупки</h3>
               <div class="curve">
@@ -82,7 +93,7 @@
             </div>
             <p class="o-body">Мы предусматриваем исключительно безопасную покупку, когда клиент делает оплату после доставки и проверки товара, вы ничем не рискуете.</p>
           </article>
-          <article class="o-item or-item or-a3">
+          <article class="o-item or-item or-a3 i7">
             <div class="o-head">
               <h3>Быстрая доставка</h3>
               <div class="curve">
@@ -92,7 +103,7 @@
             </div>
             <p class="o-body">Свой заказ вы получаете в течение 1-3 дней с момента заказа.</p>
           </article>
-          <article class="o-item or-item or-a4">
+          <article class="o-item or-item or-a4 i8">
             <div class="o-head">
               <h3>Более 3500 довольных клиентов</h3>
               <div class="curve">
@@ -106,5 +117,8 @@
       </div>
     </div>
   </section>
+
+  <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="js/common.js"></script>
 </body>
 </html>
